--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jednostavna Todo Lista</title>
+
 <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
 <div class="todo-container">
-  <h1>Jednostavna Todo Lista</h1>
+  <h1>Todo Lista</h1>
   <form id="todo-form">
     <input type="text" id="todo-input" placeholder="Dodaj novu stavku..." required>
     <button type="submit">Dodaj</button>
